==Latest==
* Added LCD Color Composite Monitor
* Implemented AppleIIIGamePort
* Fixed CPU speed with VBL 1/2 MHz switching
* Fixed AppleIIIKeyboard
* Fixed AppleIIIDiskIO
* Implemented AppleIIIBeeper
* Implemented MOS6551
* Fixed Apple III memory problems
* Implemented Apple III X-Byte addressing
* Fixed erase bug in invalidateTimers
* Added Apple Disk III
* Fixed crash when removing canvas
* Refactorized Disk II volume control
* Refactorized video interface (VRAM, AppleIIAddressDecoder, AppleIIVideo)
* Improved AppleIIKeyboard F12/CTRL+BACKSPACE behavior
* Changed Apple II plus drive 2 to Alps mechanism
* Added volume control to Disk II
* Fixed Disk II not updating last track when closing OE
* Fixed OEEmulation not being destroyed when closing OE
* Fixed crash when changing device and device was selected
* Remade ctrl+option screen in Helvetica
* Fixed Disk II sound problem when pausing/waking up
* Implemented Apple II cassette out option
* Implemented Apple II speaker tension/relaxation
* Restored support for Mac OS X 10.5 (Intel)
* Fixed crash when writing to a DSK file
* Added PH1 write inhibition in Disk II
* Modified mouse release message to "Press CTRL+OPTION to release mouse."
* Fixed crash when replacing monitors
* Implemented power/reset signals as global emulation properties
* Added F12 reset key for Apple II
* Added CFFA ROM 1.2 and ROM 1.0 firmware
* Fixed uppercase disk image extension detection in libdiskimage
* Implemented Apple III MOS6502
* Implemented Apple III keyboard
* Implemented Apple III framework

==1.0.3 17/07/2012==
* Fixed OEDocument retain/release madness
* Fix OEEmulation update()
* Fixed ControlBus cycles problem when powering off/on (time was running backwards)
* Improved Disk II sounds
* Added libdiskimage disk image write support
* Added common utility library
* Improved libdiskimage NIB decoding support
* Added Disk II mechanical phase emulation
* Implemented Disk II disk writes
* Fixed Disk II read sequencer