@@ -1,4 +1,5 @@
 ==Latest==
+* Fixed AppleIIIDiskIO drive logic
 * Added LCD Color Composite Monitor
 * Implemented AppleIIIGamePort
 * Fixed CPU speed with VBL 1/2 MHz switching
